# file_change_tracker

./: .gitignore  Makefile  README.txt  file_change_tracker.py  filechanges.py  pyproject.toml
.src.0/filechanges/: #filechanges.py#  filechanges2.py
.test.0/: test_filechanges.py
.test.0/data/: mixed_styles_w.ini
.test.0/files/static/Projects/Manning/TrackingFiles/demo2/: dummy_file_000  dummy_file_001.bat  dummy_file_009.py
file_change_tracker/: driver.py  filechanges.py
src/: filechanges.py  fred.py  hits.txt  proof_of_concept.py
src.0/filechanges/: __main__.py  filechanges.py
src/filechanges/: WHERE_WE_ARE.TXT  filechanges.py
src/test/data/: file1.txt
src/test/files/static/Projects/Manning/TrackingFiles/demo2/: dummy_file_002.txt  dummy_file_003.bat  dummy_file_004.bat
test/: test_filechanges.py
test.0/: test_filechanges2.py
test.0/files/static/Projects/Manning/TrackingFiles/demo2/: dummy_file_002.txt  dummy_file_008.sh  dummy_file_010.java
test/data/: example.ini  file1.txt.md5  file2.txt  file2.txt.md5  mixed_styles_p.ini  mixed_styles_w.ini  posix_style.ini  windows_style.ini
test/files/Projects/Projects/Manning/TrackingFiles/demo2/: dummy_file_004.tar  dummy_file_007.sha1
test/files/static/Projects/Manning/TrackingFiles/demo2/: dummy_file_006.txt
tests/: test_file_change_tracker.py  test_filechanges.py
