[tool.poetry]
name = "file_change_tracker"
version = "0.1.0"
description = ""
authors = ["Garry Offord <drofford@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
